Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-04-18 (SVN):
    * Limited hexen2 struct qsocket_s details only to net_*.c sources.
      For menu serverlist handling, added new procedures NET_SlistSort,
      NET_SlistPrintServer and NET_SlistPrintServerName. Added new
      procedure NET_QSocketGetTime for status and spawn commands' print
      functionality in host_cmd.c. Added new NET_QSocketGetAddressString
      procedure for status and connect commands' print functionality in
      host_cmd.c and sv_main.c.

2012-04-18 (SVN):
    * Made plaquemessage static to [gl_]screen.c. Added new procedure
      SCR_SetPlaqueMessage() to set it from other places.

2012-04-18 (SVN):
    * pr_cmds.c: Removed remnants of client-only and already commented
      out code.

2012-04-10 (SVN):
    * A lot of documentation updates and clean-ups.

2012-04-09 (SVN):
    * gl_draw.c (Draw_TextureMode_f, Draw_Anisotropy_f): Some micro
      optimization: Simply use the cvar pointer passed to the function
      instead of specifically referencing gl_texture_anisotropy or
      gl_texturemode specifically.

2012-04-09 (SVN):
    * gl_vidsdl.c, gl_vidnt.c: Bound non-power-of-two textures support
      to a newly added cvar gl_texture_NPOT, disabled by default. Fixes
      serious framerate drop on old graphics hardware which the driver
      is lying about its GL_ARB_texture_non_power_of_two capability.
      Mac OS X with ATI R300 to R500 series graphics cards is well known:
      http://lists.apple.com/archives/mac-opengl/2006/Dec/msg00000.html
      http://lists.apple.com/archives/mac-opengl/2009/Oct/msg00040.html
      http://www.idevgames.com/forums/printthread.php?tid=3814&page=2
      MH says NVIDIA once did the same with their GeForce FX on Windows:
      http://forums.inside3d.com/viewtopic.php?f=10&t=4832
      Identifying and blacklisting each and every problematic driver is
      virtually impossible, hence the cvar solution.